--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,6 +1,12 @@
 name: Run Tests via Pytest
 
-on: [pull_request, push]
+on:
+  pull_request_target:
+    branches:
+      - "**"
+  push:
+    branches:
+      - "**"
 
 jobs:
   build:
