--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,6 @@
     "ms-python.pylint",
     "ms-python.python",
     "ms-python.debugpy",
-    "ms-python.autopep8"
+    "ms-python.black-formatter"
   ]
 }
