--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,11 @@ pytest-docker = "^3.1.1"
 python-generics = "^0.2.2"
 pytest-lazy-fixtures = "^1.1.1"
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.3.0"
+isort = "^5.12.0"
+pylint = "^3.0.1"
+
 [tool.pytest.ini_options]
 addopts = [
     "--import-mode=importlib",
