--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ coverage = "^7.5.4"
 pytest-docker = "^3.1.1"
 python-generics = "^0.2.2"
 pytest-lazy-fixtures = "^1.1.1"
+pydantic-settings = "^2.8.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
