Switch to Pydantic settings (#28)
* Switch to Pydantic settings

* chore: sync requirements.txt with poetry.lock

* remove dotenv

* mark these as optional

---------

Co-authored-by: GitHub Actions <actions@github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ python = "<3.13, >=3.12"
 hikari = "<3.0.0, >=2.0.0.dev118"
 motor = "^3.3.2"
 redis = "^5.0.1"
-python-dotenv = "^1.0.1"
 requests = "^2.32.2"
 pydantic = "^2.10.6"
 discord-py = "^2.3.2"
@@ -26,6 +25,7 @@ coverage = "^7.5.4"
 pytest-docker = "^3.1.1"
 python-generics = "^0.2.2"
 pytest-lazy-fixtures = "^1.1.1"
+pydantic-settings = "^2.8.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
