--- a/.github/workflows/coverage-report.yml
+++ b/.github/workflows/coverage-report.yml
@@ -4,9 +4,14 @@ on:
   push:
     branches:
       - "**"
+  pull_request:
+    branches:
+      - "**"
 
 permissions:
   pull-requests: write
+  contents: write
+  checks: write
 
 jobs:
   build:
@@ -17,8 +22,7 @@ jobs:
         python-version: ["3.12"]
 
     steps:
-      - name: Checkout code (Push)
-        if: github.event_name == 'push'
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
