--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install --sync
+          poetry install --sync --with test
 
       - name: Test with pytest
         env:
