--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,9 +8,6 @@ on:
     branches:
       - "**"
 
-permissions:
-  pull-requests: write
-
 jobs:
   build:
     name: Build and Run Tests
@@ -51,10 +48,9 @@ jobs:
           MONGO_USER: ${{ secrets.MONGO_USER }}
           MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
         run: |
-          poetry run pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=bloxlink_lib tests/ | tee pytest-coverage.txt
+          poetry run pytest --cov=bloxlink_lib --cov-branch --cov-report=xml
 
-      - name: Pytest coverage comment
-        uses: MishaKav/pytest-coverage-comment@main
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
-          pytest-coverage-path: ./pytest-coverage.txt
-          junitxml-path: ./pytest.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
