--- a/.github/workflows/poetry-lock-sync.yml
+++ b/.github/workflows/poetry-lock-sync.yml
@@ -4,14 +4,18 @@ on:
   push:
     paths:
       - 'poetry.lock'
+      - 'pyproject.toml'
   workflow_dispatch:
 
 jobs:
   sync_requirements:
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+
     permissions:
       contents: write
       pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
         with:
