--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydantic = "^2.10.6"
 discord-py = "^2.3.2"
 sentry-sdk = "^2.22.0"
 pydantic-settings = "^2.8.1"
+pytest-lazy-fixtures = "^1.1.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
