Update test workflows (#34)
* workflows

* chore: sync requirements.txt with poetry.lock

* add back

* chore: sync requirements.txt with poetry.lock

* Update poetry-lock-sync.yml

---------

Co-authored-by: GitHub Actions <actions@github.com>

--- a/.github/workflows/poetry-lock-sync.yml
+++ b/.github/workflows/poetry-lock-sync.yml
@@ -4,14 +4,22 @@ on:
   push:
     paths:
       - 'poetry.lock'
+      - 'pyproject.toml'
+    branches:
+      - '**'
+    branches-ignore:
+      - 'refs/pull/**'
   workflow_dispatch:
 
 jobs:
   sync_requirements:
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+
     permissions:
       contents: write
       pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -53,13 +61,7 @@ jobs:
         run: |
           git add requirements.txt
           git commit -m "chore: sync requirements.txt with poetry.lock"
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            # Push to the PR branch
-            git push origin HEAD:${{ github.head_ref }}
-          else
-            # Push to main
-            git push
-          fi
+          git push
 
       - name: Cleanup credentials
         if: always()
