--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ homepage = "https://blox.link/"
 repository = "https://github.com/bloxlink/bloxlink-lib"
 packages = [{include = "bloxlink_lib"}]
 
-
 [tool.poetry.dependencies]
 python = "<3.13, >=3.12"
 hikari = "<3.0.0, >=2.0.0.dev118"
@@ -18,19 +17,22 @@ requests = "^2.32.2"
 pydantic = "^2.10.6"
 discord-py = "^2.3.2"
 sentry-sdk = "^2.22.0"
+pydantic-settings = "^2.8.1"
+pytest-lazy-fixtures = "^1.1.2"
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.3.0"
+isort = "^5.12.0"
+pylint = "^3.0.1"
+
+[tool.poetry.group.test.dependencies]
 pytest = "^8.2.2"
 pytest-asyncio = "^0.23.7"
 pytest-env = "^1.1.3"
 coverage = "^7.5.4"
 pytest-docker = "^3.1.1"
 python-generics = "^0.2.2"
-pytest-lazy-fixtures = "^1.1.1"
-pydantic-settings = "^2.8.1"
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.3.0"
-isort = "^5.12.0"
-pylint = "^3.0.1"
+pytest-cov = "^6.1.1"
 
 [tool.pytest.ini_options]
 addopts = [
