--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ discord-py = "^2.3.2"
 sentry-sdk = "^2.22.0"
 pydantic-settings = "^2.8.1"
 pytest-lazy-fixtures = "^1.1.2"
+asyncmock = "^0.4.2"
+pytest-asyncio-concurrent = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
