--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pytest-cov = "^6.1.1"
 addopts = [
     "--import-mode=importlib",
 ]
+asyncio_mode = "strict"
 
 [tool.pytest_env]
 BOT_RELEASE = "CANARY"
