--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ pydantic = "^2.10.6"
 discord-py = "^2.3.2"
 sentry-sdk = "^2.22.0"
 pydantic-settings = "^2.8.1"
-pytest-lazy-fixtures = "^1.1.2"
+asyncmock = "^0.4.2"
+pytest-asyncio-concurrent = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
@@ -38,7 +39,7 @@ pytest-cov = "^6.1.1"
 addopts = [
     "--import-mode=importlib",
 ]
-asyncio_mode = "auto"
+asyncio_mode = "strict"
 
 [tool.pytest_env]
 BOT_RELEASE = "CANARY"
