--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,6 @@ pydantic = "^2.10.6"
 discord-py = "^2.3.2"
 sentry-sdk = "^2.22.0"
 pydantic-settings = "^2.8.1"
-asyncmock = "^0.4.2"
-pytest-asyncio-concurrent = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
@@ -34,6 +32,9 @@ coverage = "^7.5.4"
 pytest-docker = "^3.1.1"
 python-generics = "^0.2.2"
 pytest-cov = "^6.1.1"
+pytest-asyncio-concurrent = "^0.5.0"
+snowflake-id = "^1.0.2"
+pytest-mock = "^3.14.0"
 
 [tool.pytest.ini_options]
 addopts = [
