--- a/.pylintrc
+++ b/.pylintrc
@@ -88,7 +88,7 @@ persistent=yes
 
 # Minimum Python version to use for version dependent checks. Will default to
 # the version used to run pylint.
-py-version=3.10
+py-version=3.12
 
 # Discover python modules and packages in the file system subtree.
 recursive=no
@@ -438,6 +438,7 @@ disable=raw-checker-failed,
         logging-fstring-interpolation,
         too-few-public-methods,
         too-many-arguments,
+        redefined-outer-name,
         import-error
 
 # Enable the message, report, category or checker with the given id(s). You can
