--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,17 @@ TEST_MODE = true
 MONGO_USER = "admin"
 MONGO_PASSWORD = "admin123"
 
+[tool.coverage.report]
+exclude_also = [
+    'def __repr__',
+    'raise AssertionError',
+    'raise NotImplementedError',
+    'if __name__ == .__main__.:',
+    'if TYPE_CHECKING:',
+    'class .*\bProtocol\):',
+    '@(abc\.)?abstractmethod',
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
