Change verified role migrator (#43)
* verified role migrator

* fix

* set to None instead

* fix import error

* change to computed_property instead

* Update guilds.py

* Update guilds.py

* use different approach

* allow to be none

* Update guilds.py

* Update guilds.py

* switch to using getattr

* add verified role migrator tests

* db unset changes and tests

* remove TEST_MODE

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,11 +45,12 @@ markers = [
     "primitives",
     "binds",
     "nicknames",
+    "migrators",
+    "database_utilities",
 ]
 
 [tool.pytest_env]
 BOT_RELEASE = "CANARY"
-TEST_MODE = true
 MONGO_USER = "admin"
 MONGO_PASSWORD = "admin123"
 
