--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ markers = [
 BOT_RELEASE = "CANARY"
 MONGO_USER = "admin"
 MONGO_PASSWORD = "admin123"
+MONGO_HOST = "localhost"
+REDIS_HOST = "localhost"
 
 [tool.coverage.report]
 exclude_also = [
