--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ discord-py = "^2.3.2"
 sentry-sdk = "^2.22.0"
 pydantic-settings = "^2.8.1"
 python-generics = "^0.2.3"
+pytest = "^8.2.2"
+snowflake-id = "^1.0.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
@@ -26,14 +28,12 @@ isort = "^5.12.0"
 pylint = "^3.0.1"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^8.2.2"
 pytest-asyncio = "^0.23.7"
 pytest-env = "^1.1.3"
 coverage = "^7.5.4"
 pytest-docker = "^3.1.1"
 pytest-cov = "^6.1.1"
 pytest-asyncio-concurrent = "^0.5.0"
-snowflake-id = "^1.0.2"
 pytest-mock = "^3.14.0"
 
 [tool.pytest.ini_options]
@@ -42,7 +42,7 @@ addopts = [
 ]
 asyncio_mode = "strict"
 markers = [
-    "primitives",
+    "iterable",
     "binds",
     "nicknames",
     "database",
