--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,13 @@ exclude_also = [
     '@(abc\.)?abstractmethod',
 ]
 
+[tool.coverage.run]
+omit = [
+    "*/test_utils/*",
+    "*/tests/*",
+    "bloxlink_lib/test_utils/*",
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
