--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pydantic-settings = "^2.8.1"
 python-generics = "^0.2.3"
 pytest = "^8.2.2"
 snowflake-id = "^1.0.2"
+aiohttp-retry = "^2.9.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
