--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-generics = "^0.2.3"
 pytest = "^8.2.2"
 snowflake-id = "^1.0.2"
 aiohttp-retry = "^2.9.1"
+python-consul = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
