--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ python-generics = "^0.2.3"
 pytest = "^8.2.2"
 snowflake-id = "^1.0.2"
 aiohttp-retry = "^2.9.1"
+fastapi = "^0.116.1"
+prometheus-client = "^0.22.1"
+asgi-prometheus = "^1.2.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
