--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ aiohttp-retry = "^2.9.1"
 fastapi = "^0.116.1"
 prometheus-client = "^0.22.1"
 asgi-prometheus = "^1.2.3"
+uvicorn = "^0.35.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
